--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A tiny scheme subset interpreter that can evaluate fizz-buzz code.",
   "main": "src/repl.js",
   "scripts": {
+    "fib30": "node src/fbs sample/fibonacci.scm sample/fib30.scm",
     "lint": "npx eslint src/ test/",
     "repl": "node src/repl",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
