--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fizzbuzz-scheme",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A tiny scheme subset interpreter that can evaluate fizz-buzz code.",
-  "main": "src/repl.js",
+  "main": "src/index.js",
   "scripts": {
     "fib30": "node src/fbs sample/fibonacci.scm sample/fib30.scm",
     "lint": "npx eslint src/ test/",
