add coverage report

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,6 @@ jobs:
     - run: npm install
     - run: npm run lint
     - run: npm test
+  report:
+    - name: Code Coverage Report
+      uses: romeovs/lcov-reporter-action@v0.2.11
