--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run lint
-    - run: npm test
+    - run: npm coverage
+    # - run: npm test
     - name: Code Coverage Report
       uses: romeovs/lcov-reporter-action@v0.2.11
