--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
       "!src/**/fbs.js",
       "!src/**/repl.js"
     ],
-    "coverageReporters": ["json", "html", "text"]
+    "coverageReporters": ["json", "html", "lcov", "text"]
   }
 }
