--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
     - run: npm run lint
     - run: npm run coverage
     # - run: npm test
-    - name: Code Coverage Report
-      uses: romeovs/lcov-reporter-action@v0.2.11
+    - name: Report LCOV
+      uses: zgosalvez/github-actions-report-lcov@v1.3.2
