--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,6 @@ jobs:
     # - run: npm test
     - name: Report LCOV
       uses: zgosalvez/github-actions-report-lcov@v1.3.2
+      with:
+        coverage-files: coverage/lcov.info
+        minimum-coverage: 50
