--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,3 +35,4 @@ jobs:
       with:
         coverage-files: coverage/lcov.info
         minimum-coverage: 50
+        artifact-name: code-coverage-report
