--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "majestic": "cross-env NODE_OPTIONS=--experimental-vm-modules npx majestic",
     "show-opt-deopt-win": "node --trace-deopt --trace-opt .\\src\\fbs.js .\\sample\\fibonacci.scm .\\sample\\fib30.scm",
     "perf-get-prof-win": "node --prof .\\src\\fbs.js .\\sample\\fibonacci.scm .\\sample\\fib30.scm",
-    "perf-parse-prof-win": "node --prof-process (Get-Item .\\isolate-*)"
+    "perf-parse-prof-win": "powershell -c node --prof-process (Get-Item .\\isolate-*)"
   },
   "keywords": [
     "scheme",
