--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "show-opt-deopt-win": "node --trace-deopt --trace-opt .\\src\\fbs.js .\\sample\\fibonacci.scm .\\sample\\fib30.scm",
     "perf-get-prof-win": "node --prof .\\src\\fbs.js .\\sample\\fibonacci.scm .\\sample\\fib30.scm",
     "perf-parse-prof-win": "powershell -c node --prof-process (Get-Item .\\isolate-*)",
+    "perf-win": "run-s perf-get-prof-win perf-parse-prof-win",
     "sloc": "npx sloc . -e node_modules"
   },
   "keywords": [
@@ -39,6 +40,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.0.6",
     "jest-mock-process": "^1.4.1",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   },
   "jest": {
