--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A tiny scheme subset interpreter that can evaluate fizz-buzz code.",
   "main": "src/index.js",
   "scripts": {
+    "build": "npx rollup --config ./rollup.config.js",
     "clean": "rimraf isolate-* coverage",
     "fib30": "node src/fbs sample/fibonacci.scm sample/fib30.scm",
+    "fib30d": "node dist/bundle.js sample/fibonacci.scm sample/fib30.scm",
     "lint": "npx eslint src/ test/",
     "repl": "node src/repl",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
@@ -34,6 +36,8 @@
   },
   "type": "module",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.31.0",
     "eslint-config-standard": "^16.0.3",
@@ -44,7 +48,8 @@
     "jest": "^27.2.1",
     "jest-mock-process": "^1.4.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.57.0"
   },
   "jest": {
     "collectCoverageFrom": [
