--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "author": "Hiroki Ito",
   "license": "MIT",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hrkt/fizzbuzz-scheme.git"
+  },
   "dependencies": {
     "cross-env": "^7.0.3",
     "loglevel": "^1.7.1",
