--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "jest-mock-process": "^1.4.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "rollup": "^2.57.0"
+    "rollup": "^2.57.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "jest": {
     "collectCoverageFrom": [
