--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.2.1",
     "jest-mock-process": "^1.4.1",
     "npm-run-all": "^4.1.5",
