--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.2.1",
     "jest-mock-process": "^1.4.1",
+    "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.57.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "simple-git-hooks": "^2.7.0"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -73,5 +75,12 @@
   },
   "bin": {
     "fbs": "bin/fbs.js"
+  },
+  "lint-staged": {
+    "*.js": "npx eslint"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "preserveUnused": ["commit-msg"]
   }
 }
