--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fizzbuzz-scheme",
-  "version": "0.1.8",
-  "description": "A tiny scheme subset interpreter that can evaluate fizz-buzz code.",
+  "version": "0.2.0",
+  "description": "A tiny scheme subset interpreter that can evaluate fizz-buzz code and bit more..",
   "main": "src/index.js",
   "scripts": {
     "build": "npx rollup --config ./rollup.config.js",
